infrastructure/node-config/taint-node-job.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
